# amplifier-app-vision

./: .gitignore  README.md  SPEC-MULTI-PROVIDER.md  pyproject.toml
src/amplifier_app_vision/: __init__.py  analyzer.py  cli.py  config.py  image_processor.py  streamlit_app.py  web.py
src/amplifier_app_vision/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py  router.py
